# csindy-library-evolution

./: LICENSE  README.md  requirements.txt
src/: .gitignore  gen_data.py  integrate.py  model_groundtruths.py  plot.py  reaction.py  reaction_enumerator.py  reaction_library.py  setup.cfg  wnt.py
src/evolution/: evolve_libraries.py
src/experiments/: coupled_sindy_experiment.py  evolving_libraries_experiment.py  experiment_definitions.py  gen_paper_plots.py  model_generation_experiment.py  random_search_experiment.py  run_experiments.py
src/sindy/: coupled_sindy.py  sindy.py  util.py  wrapped_optimizer.py
src/test/: test_model_groundtruth.py  test_reaction.py
