[project]
name = "evolib"
version = "0.5.0"
description = "A software to subsample large reaction libraries and evolving them with a genetic algorithm to learn sparse reaction systems with coupled SINDy."

[options]
package_dir = 
  evolib = .
  evolib.sindy = sindy
  evolib.evolution = evolution
  evolib.experiments = experiments
